# OpenFDTD-X

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ev-format.md  file-pipeline.md  libigl-integration.md  licensing-review.md  opera-acoustic-metrics.md  opera-acoustics-architecture.md  opera-acoustics-assumptions.md  opera-acoustics-baseline.md  opera-acoustics-development-status.md  opera-acoustics-existing-analysis.md  opera-acoustics-file-format.md  opera-acoustics-requirements.md  opera-acoustics-validation.md
docs/adr/: 0001-two-tier-cxx-standard.md  0002-band-compatibility.md  0003-ofdx-unknown-keys.md  0004-external-acoustic-solver.md  0005-fft-and-convolution.md  0006-vocal-f0-yin.md  0007-acoustic-solver-contract.md
resources/: openfdtd.qrc
resources/styles/: openfdtd.qss
src/: DomainBar.cpp  DomainBar.h  I18n.cpp  I18n.h  MainWindow.cpp  MainWindow.h  RightDock.cpp  RightDock.h  main.cpp
src/acoustics/c_api/: openfdtd_x_acoustics.cpp  openfdtd_x_acoustics.h
src/acoustics/core/: AcousticError.h  AcousticFdtdEstimator.cpp  AcousticFdtdEstimator.h  AcousticMetrics.cpp  AcousticMetrics.h  AnalysisQuality.h  ArrayView.h  AudioBuffer.h  BandFilter.cpp  BandFilter.h  ConvolutionEngine.cpp  ConvolutionEngine.h  DirectSoundDetector.cpp  DirectSoundDetector.h  Fft.cpp  Fft.h  NoiseFloorEstimator.cpp  NoiseFloorEstimator.h  ReflectionDetector.cpp  ReflectionDetector.h  RirAnalyzer.cpp  RirAnalyzer.h  SchroederDecay.cpp  SchroederDecay.h  VocalAnalyzer.cpp  VocalAnalyzer.h
src/acoustics/io/: WavReader.cpp  WavReader.h  WavWriter.cpp  WavWriter.h
src/acoustics/qt/: AcousticResultModel.cpp  AcousticResultModel.h  QtAcousticAdapter.cpp  QtAcousticAdapter.h
src/core/: Domain.h  Geometry.h  GlassCatalog.cpp  GlassCatalog.h  Material.h  MeshAxis.h  PostOpts.h  Project.cpp  Project.h  RoomAcoustics.cpp  RoomAcoustics.h  Source.h
src/io/: ActivationCurve.cpp  ActivationCurve.h  EvReader.h  H5Writer.cpp  H5Writer.h  OfdIO.cpp  OfdIO.h  StlImporter.cpp  StlImporter.h  Tidy3dExporter.cpp  Tidy3dExporter.h  Touchstone.cpp  Touchstone.h  Voxelizer.cpp  Voxelizer.h
src/kernel/: AcousticRunner.cpp  AcousticRunner.h  Runner.cpp  Runner.h
src/tabs/: AcousticTab.cpp  AcousticTab.h  AuralizationTab.cpp  AuralizationTab.h  GeneralTab.cpp  GeneralTab.h  GeometryTab.cpp  GeometryTab.h  GlassCatalogTab.cpp  GlassCatalogTab.h  MaterialTab.cpp  MaterialTab.h  MeshTab.cpp  MeshTab.h  OpticalTab.cpp  OpticalTab.h  Post1Tab.cpp  Post1Tab.h  Post2Tab.cpp  Post2Tab.h  RirAnalysisTab.cpp  RirAnalysisTab.h  RoomAcousticsTab.cpp  RoomAcousticsTab.h  SourceTab.cpp  SourceTab.h  Tidy3dTab.cpp  Tidy3dTab.h  UnderwaterTab.cpp  UnderwaterTab.h  VocalAnalysisTab.cpp  VocalAnalysisTab.h
src/widgets/: EvViewer.cpp  EvViewer.h  LogConsole.cpp  LogConsole.h  MiniPlot.cpp  MiniPlot.h  PlotPanel.cpp  PlotPanel.h  SectionBox.cpp  SectionBox.h  UnitNav.cpp  UnitNav.h  Viewport3D.cpp  Viewport3D.h
tests/: selftest.cpp
tests/acoustic_data/: metadata.json
tests/acoustics/: mock_acoustic_solver.c  test_acoustic_runner.cpp  test_c_api.c  test_clarity.cpp  test_common.h  test_convolution.cpp  test_direct_sound.cpp  test_estimator.cpp  test_fft.cpp  test_reflections.cpp  test_reverberation.cpp  test_schroeder.cpp  test_vocal.cpp  test_wav.cpp
tests/generators/: generate_synthetic_rir.cpp
